--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
     <center>
-        <form method="GET" action='ValidaUsuario'>
+        <form method="POST" action='ValidaUsuario'>
             <BR>
             <BR>
             <center>
@@ -21,6 +21,16 @@ and open the template in the editor.
                 <BR>
                 <BR><input type=password name=Pass>
                 <BR>
+                <BR><input type=submit value="Enviar">
+                <input type=reset value="Borrar">
+            </center>
+        </form>
+        <form method="GET" action='ValidaUsuario'>
+            <BR>
+            <BR>
+            <center>
+                Introduzca su nombre para buscar<BR>
+                <BR><input type=text name=NOMBRE>
                 <BR><input type=submit value="Enviar">
                 <input type=reset value="Borrar">
             </center>
