--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,27 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            /*Estilo*/
+		body{
+			
+			background: -moz-linear-gradient(-45deg, #5b9bd5 0%, #7030a0 50%, #ff4123 100%); /* FF3.6-15 */
+			background: -webkit-linear-gradient(-45deg, #5b9bd5 0%,#7030a0 50%,#ff4123 100%); /* Chrome10-25,Safari5.1-6 */
+			background: linear-gradient(135deg, #5b9bd5 0%,#7030a0 50%,#ff4123 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+			
+		}
+		
+		.cool{
+			margin: 0 auto;
+			width: 70%;
+			border: solid 0.5px;
+		}
+		
+		.cool p{
+			font-weight: bold;			
+		}
+	</style>
+    <link rel="stylesheet" href="bbostrap.css">    
     </head>
     <body>
     <center>
@@ -22,7 +43,7 @@ and open the template in the editor.
                 <BR><input type=password name=Pass>
                 <BR>
                 <BR><input type=submit value="Enviar">
-                <input type=reset value="Borrar">
+                <input type=reset class="btn btn-secondary" value="Borrar">
             </center>
         </form>
         <form method="GET" action='ValidaUsuario'>
@@ -32,7 +53,7 @@ and open the template in the editor.
                 Introduzca su nombre para buscar<BR>
                 <BR><input type=text name=NOMBRE>
                 <BR><input type=submit value="Enviar">
-                <input type=reset value="Borrar">
+                <input type=reset class="btn btn-secondary" value="Borrar">
             </center>
         </form>
     </center>
